# project_for_test

./: Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
src/app/: main.py  models.py
src/app/alembic/: env.py
src/app/alembic/versions/: 01a6f8a844ba_first_migration.py
src/app/core/: config.py  database.py
src/app/resources/: notes.py  notes_router.py  user_router.py
src/app/schemas/: shemas.py
src/app/services/: auth.py  notes.py  spell.py
