[tool.poetry]
name = "test-project-for-company"
version = "0.1.0"
description = ""
authors = ["natal <natal@CLOWN>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
